syntax = "proto3";

package orbital.v1;

// MetaData contains information about the message signature and encryption status.
message MetaData {
// Signature contains the information about the message signature.
  Signature signature = 1;
  // isEncrypted indicates whether the message is encrypted.
  bool isEncrypted = 2;
}
 
message Signature {
  // value is the signature of the message.
  string value = 1;
  // type specifies the type of the signature.
  string type = 2;
}
